Add snapshot testing